apps/services/media/qbittorrent/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: torrent
  labels:
    app: torrent
  annotations:
    link.argocd.argoproj.io/external-link: http://media.downloads
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: torrent
  template:
    metadata:
      labels:
        app: torrent
    spec:
      containers:
        - name: torrent
          image: linuxserver/qbittorrent:4.4.5
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 5
          ports:
            - name: ui
              containerPort: 8080
              protocol: TCP
            - name: connection-tcp
              containerPort: 6881
              protocol: TCP
            - name: connection-udp
              containerPort: 6881
              protocol: UDP
            - name: bt-tcp
              containerPort: 31136
              protocol: TCP
            - name: bt-udp
              containerPort: 31136
              protocol: UDP
          resources:
            limits:
              cpu: 400m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: movies
              mountPath: /movies
            - name: anime
              mountPath: /anime
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: torrent-storage
        - name: movies
          persistentVolumeClaim:
            claimName: movies-storage
        - name: anime
          persistentVolumeClaim:
            claimName: anime-storage
